<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="396dp"
        android:layout_height="125dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="92dp"
            android:layout_height="84dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="217dp"
            android:layout_height="61dp"
            android:layout_marginLeft="5pt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/model_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/price_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/default_text"
                android:textColor="@color/red"
                android:textSize="6pt" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="390dp"
        android:layout_height="572dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/buy_in_one_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5pt"
            android:background="@drawable/round_buy_button_style"
            android:drawableStart="@drawable/cart_icon"
            android:drawableTint="@drawable/buy_button_text_color"
            android:padding="5pt"
            android:text="@string/one_click_buy"
            android:textColor="@drawable/buy_button_text_color" />

        <Button
            android:id="@+id/add_to_featured"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_default_button_style"
            android:textColor="@drawable/default_button_text_color"
            android:drawableTint="@drawable/default_button_text_color"
            android:padding="5pt"
            android:layout_margin="5pt"
            android:drawableStart="@drawable/plus_icon"
            android:text="@string/to_featured" />

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:layout_marginTop="5pt"
            android:layout_marginBottom="5pt"
            android:layout_centerInParent="true"></com.denzcoskun.imageslider.ImageSlider>

        <TableLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:stretchColumns="1,2">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:padding="6pt"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:text="@string/model_label" />

                <TextView
                    android:id="@+id/model"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:padding="6pt"
                    android:text="@string/default_text"
                    android:textColor="@color/black"
                    android:textSize="8pt" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:padding="6pt"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:text="@string/memory_label" />

                <TextView
                    android:id="@+id/memory"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:padding="6pt"
                    android:text="@string/default_text"
                    android:textColor="@color/black"
                    android:textSize="8pt" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:padding="6pt"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:text="@string/read_speed_label" />

                <TextView
                    android:id="@+id/read_speed"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:padding="6pt"
                    android:text="@string/default_text"
                    android:textColor="@color/black"
                    android:textSize="8pt" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:padding="6pt"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:text="@string/write_speed_label" />

                <TextView
                    android:id="@+id/write_speed"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:padding="6pt"
                    android:text="@string/default_text"
                    android:textColor="@color/black"
                    android:textSize="8pt" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:padding="6pt"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:text="@string/price_label" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:padding="6pt"
                    android:text="@string/default_text" />
            </TableRow>


        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>