<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ScrollView android:orientation="vertical"
        android:layout_height="705dp"
        android:layout_width="fill_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/account_icon"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/name_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="8pt"
            android:text="@string/default_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:baselineAligned="false"
                android:text="@string/name_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/input_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.592" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="217dp"
                android:layout_height="46dp"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/name_field"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/lastname_label"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:baselineAligned="false"
                android:text="@string/lastname_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/input_lastname"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />

            <EditText
                android:id="@+id/input_lastname"
                android:layout_width="218dp"
                android:layout_height="48dp"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/lastname_field"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="5dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/age_label"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:baselineAligned="false"
                android:text="@string/age_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/input_mail"
                app:layout_constraintHorizontal_bias="0.343"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />

            <EditText
                android:id="@+id/input_age"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/age_field"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/sex_label"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:baselineAligned="false"
                android:text="@string/sex_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/input_mail"
                app:layout_constraintHorizontal_bias="0.343"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.541" />

            <EditText
                android:id="@+id/input_sex"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/sex_field"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/country_label"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:baselineAligned="false"
                android:text="@string/country_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/input_mail"
                app:layout_constraintHorizontal_bias="0.343"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478" />

            <EditText
                android:id="@+id/input_country"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/country_field"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/city_label"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:baselineAligned="false"
                android:text="@string/city_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/input_mail"
                app:layout_constraintHorizontal_bias="0.343"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />

            <EditText
                android:id="@+id/input_city"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/city_field"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.5"
            tools:layout_editor_absoluteY="337dp">

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="63dp"
                android:layout_height="36dp"
                android:baselineAligned="false"
                android:text="@string/phone_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/input_phone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/phone_field"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/address_label"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:baselineAligned="false"
                android:text="@string/address_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/input_address"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478" />

            <EditText
                android:id="@+id/input_address"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/address_field"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/mail_label"
                android:layout_width="87dp"
                android:layout_height="27dp"
                android:baselineAligned="false"
                android:text="@string/mail_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/input_mail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />

            <EditText
                android:id="@+id/input_mail"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/mail_field"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="96dp"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/email_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="64dp"
                android:layout_height="22dp"
                android:baselineAligned="false"
                android:text="@string/email"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/edit_name"
            android:layout_width="218dp"
            android:layout_height="44dp"
            android:background="@drawable/round_default_button_style"
            android:drawableStart="@drawable/edit_icon"
            android:drawableTint="@drawable/default_button_text_color"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:text="@string/edit"
            android:textColor="@drawable/default_button_text_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/input_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintStart_toEndOf="@+id/input_name" />

        <Button
            android:id="@+id/log_out"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:background="@drawable/round_deny_button_style"
            android:drawableTint="@drawable/deny_button_text_color"
            android:textColor="@drawable/deny_button_text_color"
            android:text="@string/log_out" />

        <Button
            android:id="@+id/delete_account"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:background="@drawable/round_deny_button_style"
            android:drawableTint="@drawable/deny_button_text_color"
            android:textColor="@drawable/deny_button_text_color"
            android:text="@string/account_delete" />
    </LinearLayout>
    </ScrollView>
</FrameLayout>